2022-02-07  Jonathan Bedard  <jbedard@apple.com>

        [webkitscmpy] Adopt webkitbugspy for GitHub issues (Part 2)
        https://bugs.webkit.org/show_bug.cgi?id=235899
        <rdar://problem/88280520>

        Reviewed by Dewei Zhu.

        * Scripts/libraries/webkitscmpy/setup.py: Add webkitbugspy dependency.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Ditto.
        * Scripts/libraries/webkitscmpy/webkitscmpy/mocks/remote/git_hub.py:
        (GitHub): Build on top of webkitbugspy's mock GitHub server.
        (GitHub.__init__): Pass mock environment to base class.
        (GitHub.request): Let webkitbugspy handle issues.
        (GitHub.__enter__): Deleted.
        (GitHub.__exit__): Deleted.
        (GitHub._users): Deleted.
        * Scripts/libraries/webkitscmpy/webkitscmpy/remote/git_hub.py:
        (GitHub.PRGenerator.PullRequest): Linked issue should be an "issue" object.
        (GitHub.PRGenerator.create): Ditto.
        (GitHub.PRGenerator.update): Ditto.
        (GitHub.PRGenerator._contributor): Leverage webkitbugpy to retrieve information
        about unknown contributors.
        (GitHub.PRGenerator.comment): Leverage webkitbugspy to create comments.
        (GitHub.PRGenerator.comments): Leverage webkitbugspy to retrieve comments.
        (GitHub.__init__): Construct a tracker, populate it's user mapping.
        (GitHub.credentials): Leverage webkitbugspy to retrieve credentials.
        * Scripts/libraries/webkitscmpy/webkitscmpy/test/land_unittest.py:
        (TestLandGitHub.webserver): Create a mock issue.
        * Scripts/libraries/webkitscmpy/webkitscmpy/test/pull_request_unittest.py:
        (TestNetworkPullRequestGitHub.webserver): Create a mock issue.

2022-02-07  Jonathan Bedard  <jbedard@apple.com>

        [webkitscmpy] Adopt webkitbugspy for GitHub issues (Part 1)
        https://bugs.webkit.org/show_bug.cgi?id=235899
        <rdar://problem/88280520>

        Reviewed by Dewei Zhu.
