@@ -1,5 +1,16 @@
 2022-02-07  Jonathan Bedard  <jbedard@apple.com>
 
+        [webkitscmpy] Adopt webkitbugspy for GitHub issues (Part 3)
+        https://bugs.webkit.org/show_bug.cgi?id=235899
+        <rdar://problem/88280520>
+
+        Reviewed by Dewei Zhu.
+
+        * Scripts/webkitpy/__init__.py: Add webkitbugspy as a local dependency,
+        bump local dependency version dependencies.
+
+2022-02-07  Jonathan Bedard  <jbedard@apple.com>
+
         [webkitscmpy] Adopt webkitbugspy for GitHub issues (Part 2)
         https://bugs.webkit.org/show_bug.cgi?id=235899
         <rdar://problem/88280520>
